# Find libjpeg library
FIND_PACKAGE(JPEG REQUIRED)

# Find Spinnaker library
FIND_PACKAGE(Spinnaker REQUIRED)

FIND_PACKAGE(Aravis REQUIRED)
FIND_PACKAGE(glib2 REQUIRED)

# Build our NUClear module
NUCLEAR_MODULE(INCLUDES ${JPEG_INCLUDE_DIR} ${Spinnaker_INCLUDE_DIRS} ${Aravis_INCLUDE_DIRS} ${glib2_INCLUDE_DIRS}
               LIBRARIES ${JPEG_LIBRARIES} ${Spinnaker_LIBRARY} ${Aravis_LIBRARY} ${glib2_LIBRARIES})
